Actualizacion de portafolio y agregamos cuadro de texto para contacto

--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,178 @@
 @import url('https://fonts.googleapis.com/css2?family=Comic+Relief:wght@400;700&display=swap');
 
-*{
+* {
     margin: auto;
 }
+
 header {
-  background-color: #af4646;
-  text-align: center;
-  margin-bottom: 30px;
-  
-  border: solid 20px #40179d;
-  padding: 50px; 
-  
+    background-color: #af4646;
+    text-align: center;
+    margin-bottom: 30px;
+
+    border: solid 20px #40179d;
+    padding: 50px;
+
 
 }
+
+
 h1 {
-     font-family: "Comic Relief", system-ui;
+    font-family: "Comic Relief", system-ui;
 }
-h2 {
-      font-family: "Comic Relief", system-ui;
+
+h2,
+h3 {
+    font-family: "Comic Relief", system-ui;
+}
+.bi {
+    color: #05057a;
 }
 p {
     color: #054b11;
-     font-family: "Comic Relief"
+    font-family: "Comic Relief"
 }
+
+#menu-principal {
+    list-style-type: none;
+    display: flex;
+
+}
+
+nav {
+    overflow: hidden;
+    padding: 20px 0px;
+}
+
+#menu-principal a {
+    text-decoration: none;
+    font-family: "Comic Relief", system-ui;
+    font-size: 25px;
+    color: #e21f9e;
+    padding: 8%;
+}
+
+#menu-principal a:hover {
+    color: aqua;
+    background-color: #e21f9e;
+    ;
+}
+
 #foto-perfil {
     width: 300px;
     border-radius: 30px;
     float: right;
+}
+
+main {
+    overflow: hidden;
+}
+
+section {
+
+    overflow: hidden;
+}
+
+#proyectos {
+    padding: 20px 30px;
+    border-top: solid 5px #e21f9e;
+    margin-top: 30px;
+    text-align: center;
+}
+
+#Lista-Proyectos {
+    display: flex;
+
+
+}
+
+.proyecto {
+    width: 33%;
+    margin-top: 20px;
+
+}
+
+.proyecto img {
+    width: 90%;
+    border-radius: 15px;
+    margin-top: 10px;
+}
+
+.proyecto p {
+    text-align: justify;
+    padding: 10px 5px;
+    color: #47040c;
+}
+
+.proyecto h3 {
+    color: #05057a;
+    font-weight: lighter;
+}
+
+#habilidades {
+    overflow: hidden;
+    margin-top: 20px;
+    padding-bottom: 20px;
+    border-top: solid 5px #55d10d;
+    margin-bottom: 30px;
+
+}
+
+progress {
+    width: 100%;
+    height: 25px;
+    border-radius: 20px;
+    margin: 10px 0px;
+}
+
+.listas_tecnologias {
+    list-style-type: none;
+    display: flex;
+    margin-left: 0%;
+    justify-content: center;
+    gap: 30px;
+
+}
+
+.listas_tecnologias li {
+    background-color: #05057a;
+    color: #55d10d;
+    padding: 12px 40px;
+    border-radius: 40px;
+    text-align: center;
+}
+
+footer {
+    overflow: hidden;
+    background-color: #af4646;
+    text-align: center;
+    padding: 40px 0px;
+    border-top: solid 5px #066da5;
+
+}
+#contacto {
+    margin-top: 20px;
+    padding-top: 20px;
+    border-top: solid 5px #e21f9e;
+    text-align: center;
+}
+#contacto a {
+    color: #1fe280;
+    text-decoration: none;
+}
+.campos {
+    width: 70%;
+    clear: both;
+    font-size: 28px;
+}
+.campos label {
+    padding-right: 20px;
+
+}
+.campos input {
+    padding: 10px;
+    border: solid 2px #40179d;
+    width: 50%;
+    font-size: 20px;
+    border-radius: 10px;
+    
 }
